--- a/ZombieGuide/ZombieGuide.csproj
+++ b/ZombieGuide/ZombieGuide.csproj
@@ -128,6 +128,7 @@
     <Folder Include="Scripts\app\services\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ZombieImageController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
