--- a/ZombieGuide/ZombieGuide.csproj
+++ b/ZombieGuide/ZombieGuide.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\ZombieImageController.cs" />
+    <Compile Include="Api\ZombiesController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
