Base for angular integration

--- a/ZombieGuide/ZombieGuide.csproj
+++ b/ZombieGuide/ZombieGuide.csproj
@@ -122,9 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Scripts\app\controllers\" />
     <Folder Include="Scripts\app\directives\" />
-    <Folder Include="Scripts\app\modules\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\ZombieImageController.cs" />
@@ -485,7 +483,9 @@
     <Content Include="Views\Zombie\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="Scripts\app\services\zombiesService.ts" />
+    <TypeScriptCompile Include="Scripts\app\controllers\zombieListCtrl.ts" />
+    <TypeScriptCompile Include="Scripts\app\modules\applicationModule.ts" />
+    <TypeScriptCompile Include="Scripts\app\services\zombieService.ts" />
     <TypeScriptCompile Include="Scripts\TypeDefs\angular\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\TypeDefs\angular\angular-cookies.d.ts" />
     <TypeScriptCompile Include="Scripts\TypeDefs\angular\angular-mocks.d.ts" />
